--- a/Mh/res/layout/user_info_show.xml
+++ b/Mh/res/layout/user_info_show.xml
@@ -90,5 +90,25 @@
             android:background="@drawable/do_work_redbtn"
             android:text="注销登录" />
     </LinearLayout>
+     <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+		<View 
+		    android:layout_width="0dip"
+		    android:layout_height="0dip"
+		    android:layout_weight="1"/>
+        <Button
+            android:id="@+id/user_info_login_but"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:padding="10dip"
+            android:textSize="16dip"
+            android:layout_weight="1"
+            android:layout_margin="10dip"
+            android:background="@drawable/do_work_redbtn"
+            android:text="商家入口" />
+    </LinearLayout>
 
 </LinearLayout>
