--- a/Mh/res/layout/user_login.xml
+++ b/Mh/res/layout/user_login.xml
@@ -124,6 +124,29 @@
                 android:textColor="#ffffff"
                 android:textSize="16dip" />
         </LinearLayout>
+         <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+            android:padding="5dip" >
+            <View 
+                android:layout_width="0dip"
+                android:layout_height="0dip"
+                android:layout_weight="1"/>
+        <Button
+            android:layout_gravity="right"
+                android:id="@+id/login_seller"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="10dip"
+                android:layout_weight="1"
+                android:padding="10dip"
+                android:text="商家登录"
+                android:background="@drawable/do_work_redbtn"
+                android:textColor="#ffffff"
+                android:textSize="16dip" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
